After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 322298 - "Save As" Dialog kannt be resized only after pressing the "Directory-Browser" button
"Save As" Dialog kannt be resized only after pressing the "Directory-Browser"...
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
2.8.x
Other All
: Normal normal
: ---
Assigned To: Federico Mena Quintero
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2005-11-24 06:13 UTC by Matej Svejda
Modified: 2008-05-19 17:26 UTC
See Also:
GNOME target: ---
GNOME version: 2.11/2.12


Attachments
gtk2-bgo322298-filechooser-dialog-always-resizable.diff (8.24 KB, patch)
2008-05-19 17:26 UTC, Federico Mena Quintero
committed Details | Review

Description Matej Svejda 2005-11-24 06:13:00 UTC
Please describe the problem:
I find it really anoying, that if you want to resize a "Save-As" dialog, you
have to press the "Directory-Browser" button to be able to resize the dialog.

I dislike this especially because I work with Devil's Pie and tried to make the
Dialogs pop-up bigger autmaticly. This does work with the "Open-File" dialog,
but not with the "Save-As".

Steps to reproduce:
1. 
2. 
3. 


Actual results:


Expected results:


Does this happen every time?


Other information:
Comment 1 Björn Lindqvist 2008-05-18 01:17:31 UTC
Confirmed, you have to press the expander button before the dialog can be resized. I wonder why? Resizing is explicitly disabled for collapsed filechooserdialogs. That makes no sense...
Comment 2 Federico Mena Quintero 2008-05-19 17:26:31 UTC
Created attachment 111169 [details] [review]
gtk2-bgo322298-filechooser-dialog-always-resizable.diff

Thanks, this was some historic code lying around.  The dialog is now always resizable in SVN trunk.